# luminet

./: .gitignore  .readthedocs.yaml  README.md  parameters.ini  pixi.toml  pyproject.toml
.github/workflows/: documentation-links.yml  publish-to-pypi.yml  publish.yml  python-app.yml  test.yml
.ipynb_checkpoints/: README-checkpoint.md
__pycache__/: .gitignore
docs/: requirements.txt
docs/_templates/python/: class.rst  module.rst
docs/source/: api_reference.rst  bibliography.bib  conf.py  index.rst
docs/tutorials/: 1. intro.ipynb  3. disk shape.ipynb  4. disk color.ipynb  Untitled.ipynb
docs/tutorials/.ipynb_checkpoints/: 2. isoradial lines-checkpoint.ipynb  Untitled-checkpoint.ipynb
luminet/: black_hole.py  black_hole_math.py  isoradial.py  isoredshift.py  recipe.yml  solver.py  spatial.py  transform.py  viz.py
luminet/tests/: test_viz.py
src/: black_hole.py  black_hole_math.py  isoradial.py  isoredshift.py  solver.py  viz.py
tests/: parameters.ini  test_black_hole.py  test_black_hole_math.py  test_isoradials.py  test_isoredshifts.py  test_viz.py
